collection service cleanup