@@ -45,6 +45,7 @@ import org.broadinstitute.consent.http.enumeration.ElectionStatus;
 import org.broadinstitute.consent.http.enumeration.ElectionType;
 import org.broadinstitute.consent.http.enumeration.UserRoles;
 import org.broadinstitute.consent.http.enumeration.VoteType;
+import org.broadinstitute.consent.http.models.Dac;
 import org.broadinstitute.consent.http.models.DarCollection;
 import org.broadinstitute.consent.http.models.DarCollectionSummary;
 import org.broadinstitute.consent.http.models.DataAccessRequest;
@@ -59,7 +60,7 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mock;
 
-public class DarCollectionServiceTest {
+class DarCollectionServiceTest {
 
   private DarCollectionService service;
 
@@ -88,7 +89,7 @@ public class DarCollectionServiceTest {
   }
 
   @Test
-  public void testAddDatasetsToCollection() {
+  void testAddDatasetsToCollection() {
     List<DarCollection> collections = new ArrayList<>();
     Set<Dataset> datasets = new HashSet<>();
     collections.add(generateMockDarCollection(datasets));
@@ -116,7 +117,7 @@ public class DarCollectionServiceTest {
   }
 
   @Test
-  public void testAddDatasetsToCollectionsWithFilterDatasetIds() {
+  void testAddDatasetsToCollectionsWithFilterDatasetIds() {
     List<DarCollection> collections = new ArrayList<>();
     Set<Dataset> datasets = new HashSet<>();
     // need a minimal version of a collection with an array of datasetIds
@@ -151,7 +152,7 @@ public class DarCollectionServiceTest {
   }
 
   @Test
-  public void testCancelDarCollection_noElections() {
+  void testCancelDarCollection_noElections() {
     Set<Dataset> datasets = new HashSet<>();
     DarCollection collection = generateMockDarCollection(datasets);
     collection.getDars().values().forEach(d -> d.getData().setStatus("Canceled"));
@@ -169,7 +170,7 @@ public class DarCollectionServiceTest {
   }
 
   @Test
-  public void testCancelDarCollection_electionPresent() {
+  void testCancelDarCollection_electionPresent() {
     Set<Dataset> datasets = new HashSet<>();
     DarCollection collection = generateMockDarCollection(datasets);
 
@@ -185,7 +186,7 @@ public class DarCollectionServiceTest {
   }
 
   @Test
-  public void testCancelDarCollectionAsResearcher_NoElections() {
+  void testCancelDarCollectionAsResearcher_NoElections() {
     DataAccessRequest dar = new DataAccessRequest();
     dar.setReferenceId(UUID.randomUUID().toString());
     DataAccessRequestData data = new DataAccessRequestData();
@@ -204,7 +205,7 @@ public class DarCollectionServiceTest {
   }
 
   @Test
-  public void testCancelDarCollectionAsResearcher_WithElections() {
+  void testCancelDarCollectionAsResearcher_WithElections() {
     DataAccessRequest dar = new DataAccessRequest();
     dar.setReferenceId(UUID.randomUUID().toString());
     DataAccessRequestData data = new DataAccessRequestData();
@@ -224,7 +225,7 @@ public class DarCollectionServiceTest {
   }
 
   @Test
-  public void testCancelDarCollectionAsAdmin() {
+  void testCancelDarCollectionAsAdmin() {
     DataAccessRequest dar = new DataAccessRequest();
     dar.setReferenceId(UUID.randomUUID().toString());
     DataAccessRequestData data = new DataAccessRequestData();
@@ -246,7 +247,7 @@ public class DarCollectionServiceTest {
   }
 
   @Test
-  public void testCancelDarCollectionAsChair_ChairHasDatasets() {
+  void testCancelDarCollectionAsChair_ChairHasDatasets() {
     User user = new User();
     user.setEmail("email");
     Dataset dataset = new Dataset();
@@ -275,7 +276,7 @@ public class DarCollectionServiceTest {
   }
 
   @Test
-  public void testCancelDarCollectionAsChair_ChairHasNoDatasets() {
+  void testCancelDarCollectionAsChair_ChairHasNoDatasets() {
     User user = new User();
     user.setEmail("email");
     Dataset dataset = new Dataset();
@@ -303,7 +304,7 @@ public class DarCollectionServiceTest {
   }
 
   @Test
-  public void testCreateElectionsForDarCollection() throws Exception {
+  void testCreateElectionsForDarCollection() throws Exception {
     User user = new User();
     user.setEmail("email");
     DataAccessRequest dar = new DataAccessRequest();
@@ -328,7 +329,7 @@ public class DarCollectionServiceTest {
   }
 
   @Test
-  public void testDeleteAsResearcherNoElections() {
+  void testDeleteAsResearcherNoElections() {
     User user = new User();
     user.setUserId(1);
     String dacRoleName = UserRoles.RESEARCHER.getRoleName();
@@ -363,7 +364,7 @@ public class DarCollectionServiceTest {
   }
 
   @Test
-  public void testDeleteAsResearcherWithElections() {
+  void testDeleteAsResearcherWithElections() {
     User user = new User();
     user.setUserId(1);
     String dacRoleName = UserRoles.RESEARCHER.getRoleName();
@@ -381,8 +382,7 @@ public class DarCollectionServiceTest {
       add(e);
     }});
     when(darCollectionDAO.findDARCollectionByCollectionId(any())).thenReturn(collection);
-    collection.getDars().values().stream().map(DataAccessRequest::getReferenceId)
-        .collect(Collectors.toList());
+    collection.getDars().values().stream().map(DataAccessRequest::getReferenceId).toList();
 
     Integer collectionId = collection.getDarCollectionId();
 
@@ -393,7 +393,7 @@ public class DarCollectionServiceTest {
   }
 
   @Test
-  public void testDeleteAsAdminWithElections() {
+  void testDeleteAsAdminWithElections() {
     User user = new User();
     user.setUserId(1);
     String dacRoleName = UserRoles.ADMIN.getRoleName();
@@ -427,7 +427,7 @@ public class DarCollectionServiceTest {
 
 
   @Test
-  public void testDeleteAsUser() {
+  void testDeleteAsUser() {
     User user = new User();
     user.setUserId(1);
 
@@ -448,7 +448,7 @@ public class DarCollectionServiceTest {
   }
 
   @Test
-  public void testDeleteButNoCollection() {
+  void testDeleteButNoCollection() {
     User user = new User();
     user.setUserId(1);
 
@@ -469,7 +469,7 @@ public class DarCollectionServiceTest {
   }
 
   @Test
-  public void testProcessDarCollectionSummariesForDAC_SO_InProcess() {
+  void testProcessDarCollectionSummariesForDAC_SO_InProcess() {
     User user = new User();
     user.setUserId(1);
     DarCollectionSummary summary = new DarCollectionSummary();
@@ -494,7 +494,7 @@ public class DarCollectionServiceTest {
   }
 
   @Test
-  public void testProcessDarCollectionSummariesForDAC_SO_Complete() {
+  void testProcessDarCollectionSummariesForDAC_SO_Complete() {
     User user = new User();
     user.setUserId(1);
     DarCollectionSummary summary = new DarCollectionSummary();
@@ -526,7 +526,7 @@ public class DarCollectionServiceTest {
   }
 
   @Test
-  public void testProcessDarCollectionSummariesForDAC_SO_Unreviewed() {
+  void testProcessDarCollectionSummariesForDAC_SO_Unreviewed() {
     User user = new User();
     user.setUserId(1);
     DarCollectionSummary summary = new DarCollectionSummary();
@@ -550,7 +550,7 @@ public class DarCollectionServiceTest {
   }
 
   @Test
-  public void testProcessDarCollectionSummariesForResearcher() {
+  void testProcessDarCollectionSummariesForResearcher() {
 
     //summaryOne -> in review (elections present)
     //summarytwo -> no elections
@@ -643,7 +643,7 @@ public class DarCollectionServiceTest {
   }
 
   @Test
-  public void testProcessDarCollectionSummariesForAdmin() {
+  void testProcessDarCollectionSummariesForAdmin() {
     //summaryOne -> all elections present and open
     //summaryTwo -> mix of open elections : absent/non-open elections (in process)
     //summaryThree -> all canceled elections (Complete)
@@ -740,9 +740,14 @@ public class DarCollectionServiceTest {
   }
 
   @Test
-  public void testProcessDarCollectionSummariesForDACMember() {
+  void testProcessDarCollectionSummariesForDACMember() {
+    Dac dac = new Dac();
+    dac.setDacId(1);
     User user = new User();
     user.setUserId(1);
+    user.setRoles(List.of(
+        new UserRole(1, user.getUserId(), UserRoles.MEMBER.getRoleId(),
+            UserRoles.MEMBER.name(), dac.getDacId())));
 
     //summaryOne -> no open elections (no action)
     //summaryTwo -> at least one open election, member has submitted all votes (Update button)
@@ -790,7 +795,7 @@ public class DarCollectionServiceTest {
 
     when(darCollectionSummaryDAO.getDarCollectionSummariesForDAC(any(), any()))
         .thenReturn(List.of(summary, summaryTwo, summaryThree, summaryFour));
-    when(datasetDAO.findDatasetDTOsByUserId(any())).thenReturn(Set.of());
+    when(datasetDAO.findDatasetListByDacIds(any())).thenReturn(List.of());
 
     initService();
 
@@ -822,7 +827,7 @@ public class DarCollectionServiceTest {
   }
 
   @Test
-  public void testProcessDarCollectionSummariesForChair() {
+  void testProcessDarCollectionSummariesForChair() {
     //summaryOne -> all elections present and open
     //summaryTwo -> mix of open elections : absent/canceled elections (in process)
     //summaryThree -> all canceled elections (Complete)
@@ -830,8 +835,13 @@ public class DarCollectionServiceTest {
     //summaryFive -> mix of open : absent/closed elections (in process, but cancel action does not appear)
     //summarySix -> all closed elections (complete, only open available)
 
+    Dac dac = new Dac();
+    dac.setDacId(1);
     User user = new User();
     user.setUserId(1);
+    user.setRoles(List.of(
+        new UserRole(1, user.getUserId(), UserRoles.CHAIRPERSON.getRoleId(),
+            UserRoles.CHAIRPERSON.name(), dac.getDacId())));
 
     DarCollectionSummary summaryOne = new DarCollectionSummary();
     Dataset datasetOne = new Dataset();
@@ -910,7 +920,7 @@ public class DarCollectionServiceTest {
     when(darCollectionSummaryDAO.getDarCollectionSummariesForDAC(any(), any()))
         .thenReturn(
             List.of(summaryOne, summaryTwo, summaryThree, summaryFour, summaryFive, summarySix));
-    when(datasetDAO.findDatasetDTOsByUserId(any())).thenReturn(Set.of());
+    when(datasetDAO.findDatasetListByDacIds(any())).thenReturn(List.of());
 
     initService();
 
@@ -969,7 +979,7 @@ public class DarCollectionServiceTest {
   }
 
   @Test
-  public void testGetSummaryForRoleNameByCollectionId_SO() {
+  void testGetSummaryForRoleNameByCollectionId_SO() {
     User user = new User();
     user.setUserId(1);
 
@@ -1005,7 +1015,7 @@ public class DarCollectionServiceTest {
   }
 
   @Test
-  public void testGetSummaryForRoleNameByCollectionId_Researcher() {
+  void testGetSummaryForRoleNameByCollectionId_Researcher() {
     User user = new User();
     user.setUserId(1);
 
@@ -1043,7 +1053,7 @@ public class DarCollectionServiceTest {
   }
 
   @Test
-  public void testGetSummaryForRoleNameByCollectionId_Admin() {
+  void testGetSummaryForRoleNameByCollectionId_Admin() {
     User user = new User();
     user.setUserId(1);
 
@@ -1082,10 +1092,14 @@ public class DarCollectionServiceTest {
   }
 
   @Test
-  public void testGetSummaryForRoleNameByCollectionId_Chair() {
+  void testGetSummaryForRoleNameByCollectionId_Chair() {
+    Dac dac = new Dac();
+    dac.setDacId(1);
     User user = new User();
     user.setUserId(1);
-
+    user.setRoles(List.of(
+        new UserRole(1, user.getUserId(), UserRoles.CHAIRPERSON.getRoleId(),
+            UserRoles.CHAIRPERSON.name(), dac.getDacId())));
     DarCollectionSummary summary = new DarCollectionSummary();
     Integer collectionId = RandomUtils.nextInt(1, 100);
     summary.setDarCollectionId(collectionId);
@@ -1107,7 +1121,7 @@ public class DarCollectionServiceTest {
     when(darCollectionSummaryDAO.getDarCollectionSummaryForDACByCollectionId(user.getUserId(),
         List.of(), collectionId))
         .thenReturn(summary);
-    when(datasetDAO.findDatasetDTOsByUserId(any())).thenReturn(Set.of());
+    when(datasetDAO.findDatasetListByDacIds(any())).thenReturn(List.of());
 
     initService();
 
@@ -1125,9 +1139,14 @@ public class DarCollectionServiceTest {
   }
 
   @Test
-  public void testGetSummaryForRoleNameByCollectionId_DACMember() {
+  void testGetSummaryForRoleNameByCollectionId_DACMember() {
+    Dac dac = new Dac();
+    dac.setDacId(1);
     User user = new User();
     user.setUserId(1);
+    user.setRoles(List.of(
+        new UserRole(1, user.getUserId(), UserRoles.MEMBER.getRoleId(),
+            UserRoles.MEMBER.name(), dac.getDacId())));
 
     DarCollectionSummary summary = new DarCollectionSummary();
     Integer collectionId = RandomUtils.nextInt(1, 100);
@@ -1153,7 +1172,7 @@ public class DarCollectionServiceTest {
     when(darCollectionSummaryDAO.getDarCollectionSummaryForDACByCollectionId(user.getUserId(),
         List.of(), collectionId))
         .thenReturn(summary);
-    when(datasetDAO.findDatasetDTOsByUserId(any())).thenReturn(Set.of());
+    when(datasetDAO.findDatasetListByDacIds(any())).thenReturn(List.of());
 
     initService();
 
@@ -1169,7 +1188,7 @@ public class DarCollectionServiceTest {
   }
 
   @Test
-  public void testGetSummaryForRoleNameByCollectionId_NoSummaryFound() {
+  void testGetSummaryForRoleNameByCollectionId_NoSummaryFound() {
     User user = new User();
     user.setUserId(1);
     DarCollectionSummary summary = new DarCollectionSummary();
